--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ htmlcov/
 .nox/
 .coverage
 .coverage.*
-.cache
+**/.cache
 nosetests.xml
 coverage.xml
 *.cover
@@ -120,8 +120,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
-.venv
+**/.env
+**/.venv
 env/
 venv/
 ENV/
